--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ input {
     box-shadow: 0 0 5px black;
     border-radius: 15px;
     margin-left: 2px;
+    margin-top: 2px;
     text-align: center;
 }
 
