--- a/style.css
+++ b/style.css
@@ -20,17 +20,17 @@ input {
     text-align: center;
 }
 
-input#name {
+.name {
     width: 50px;
     height: 30px;
 }
 
-input#flavor {
+.flavor {
     width: 140px;
     height: 30px;
 }
 
-input#egg {
+.egg {
     width: 120px;
     height: 30px
 }
