--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ input {
     margin-left: 2px;
     margin-top: 2px;
     text-align: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 
 .name {
@@ -54,4 +55,5 @@ button {
     border-radius: 15px;
     width: 80px;
     height: 20px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
